--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.quantum.rerevise">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,15 +14,40 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ReRevise">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+        <activity android:name=".activities.DashBoardActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="true">
+
+        </activity>
+        <activity android:name=".activities.SecondActivity"
+            android:exported="true"/>
+        <activity android:name=".activities.ServiceActivity"/>
+        <activity android:name=".activities.BindingActivity"/>
+        <activity android:name=".activities.IntentServiceActivity"/>
+        <activity android:name=".activities.SmsActivity"/>
+        <activity android:name=".activities.ContactActivity"/>
+
+        <service android:name="services.Services"/>
+        <service android:name="services.BoundServices"/>
+        <service android:name="services.CashBackIntentService"
+            tools:ignore="Instantiatable" />
+
+        <receiver android:name="broadcast.SmsReceiver" android:exported="true" android:enabled="true"
+            android:permission="android.permission.BROADCAST_SMS">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_DELIVER"
+                    android:priority="999" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
