--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
     <uses-permission android:name="android.permission.READ_SMS"/>
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"
+        tools:ignore="CoarseFineLocation" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,6 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ReRevise">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key"/>
+
         <activity android:name=".activities.DashBoardActivity"
             android:exported="true"
             android:screenOrientation="portrait">
@@ -35,6 +44,10 @@
         <activity android:name=".activities.IntentServiceActivity"/>
         <activity android:name=".activities.SmsActivity"/>
         <activity android:name=".activities.ContactActivity"/>
+        <activity android:name=".activities.GalleryActivity"/>
+        <activity android:name=".activities.ImageDetailActivity"/>
+        <activity android:name=".activities.ApiActivity"/>
+        <activity android:name=".activities.MapActivity"/>
 
         <service android:name="services.Services"/>
         <service android:name="services.BoundServices"/>
